; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_start.c_menu_cbs_init_bind_start.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_start.c_menu_cbs_init_bind_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@action_start_lookup_setting = common dso_local global i32 0, align 4
@MENU_SETTINGS_AUDIO_MIXER_STREAM_ACTIONS_VOLUME_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_AUDIO_MIXER_STREAM_ACTIONS_VOLUME_END = common dso_local global i32 0, align 4
@action_start_audio_mixer_stream_volume = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @menu_cbs_init_bind_start(i32* %0, i8* %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %30

15:                                               ; preds = %5
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* @action_start_lookup_setting, align 4
  %18 = call i32 @BIND_ACTION_START(i32* %16, i32 %17)
  %19 = load i32*, i32** %7, align 8
  %20 = call i64 @menu_cbs_init_bind_start_compare_label(i32* %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %15
  store i32 0, i32* %6, align 4
  br label %30

23:                                               ; preds = %15
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %10, align 4
  %26 = call i64 @menu_cbs_init_bind_start_compare_type(i32* %24, i32 %25)
  %27 = icmp eq i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i32 0, i32* %6, align 4
  br label %30

29:                                               ; preds = %23
  store i32 -1, i32* %6, align 4
  br label %30

30:                                               ; preds = %29, %28, %22, %14
  %31 = load i32, i32* %6, align 4
  ret i32 %31
}

declare dso_local i32 @BIND_ACTION_START(i32*, i32) #1

declare dso_local i64 @menu_cbs_init_bind_start_compare_label(i32*) #1

declare dso_local i64 @menu_cbs_init_bind_start_compare_type(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
